hphp/hack/test/typecheck/typeconsts/stricter_typeconsts/concrete_concrete_error.php.exp
File "concrete_concrete_error.php", line 9, characters 14-14:
Cannot re-declare this type constant (Typing[4430])
  File "concrete_concrete_error.php", line 4, characters 14-14:
  Previously defined here
