hphp/hack/test/typecheck/typeconsts/stricter_typeconsts/concrete_concrete_error.php
<?hh

class C {
  const type T = int;
}

newtype X = int;
class D extends C {
  const type T = X; // can also be Tany
}
